# mcp-server

./: README.md
server/mcp_server_deploy/: .env.example  README.md  pyproject.toml  requirements.txt
server/mcp_server_deploy/src/mcp_server_deploy/: __init__.py  __main__.py  apig.py  github.py  knowledge.py  middleware.py  models.py  prompt.py  server.py  terraform.py  test_terraform.py  todo.py  validate.py
server/mcp_server_deploy/src/mcp_server_deploy/open_api/: get_client.py  utils.py
