[project]
name = "mcp-server-deploy"
version = "0.1.0"
description = "MCP server for Deploy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp~=2.12.2",
    "python-dotenv>=1.0.0",
    "mysql-connector-python>=8.0.0",
    "volcengine-python-sdk>=4.0.20",
    "cachetools>=6.2.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
mcp-server-deploy = "mcp_server_deploy:main"
